# Web-Server-Capstone-Project

./: .gitignore  CMakeLists.txt  README  README.md
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: config_parser.h  dispatcher.h  echo_handler.h  error_handler.h  handle_manager.h  handler_manager.h  meme_db.h  meme_handler.h  request.h  request_handler.h  response.h  server.h  server_object.h  server_status.h  session.h  static_handler.h  status_handler.h  status_obj.h  url_parser.h
memes_r_us/: create.html  list.html  meme_vault.db  test.db  view.html
src/: bad_handler.cc  config_parser.cc  dispatcher.cc  echo_handler.cc  error_handler.cc  handler_manager.cc  health_handler.cc  meme_db.cc  meme_handler.cc  proxy_handler.cc  request.cc  response.cc  server.cc  server_main.cc  server_object.cc  server_status.cc  session.cc  static_handler.cc  status_handler.cc  status_obj.cc  url_parser.cc
tests/: .echo_server_config.swp  bad_config.txt  bad_handler_test.cc  config_parser_test.cc  dispatcher_test.cc  echo_handler_test.cc  echo_server_config  echo_test.cc  error_handler_test.cc  example_config  handler_manager_test.cc  health_handler_test.cc  integration_2.py  integration_2.sh  integration_expected_response  integration_test.sh  integration_test_config  integration_test_multi.sh  meme_db_test.cc  meme_handler_test.cc  multithread_test.py  proxy_handler_test.cc  request_test.cc  response_test.cc  server_test.cc  session_test.cc  static_handler_test.cc  status_handler_test.cc  status_obj_test.cc
tests/configs/: bad_meme_config  echo_server_config  meme_config
tests/integration/: integration_expected_response  integration_test_config  integration_test_proxy_response_2  integration_test_response
tests/meme_handler_tests/: edit_request  post_request  post_request2  post_request3
tests/static_handler_tests/: csv_request  doc_request  jpeg_request  pdf_request  photo_request  png_request  tiff_request  txt_request
